--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,11 +18,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            
         </activity>
         <activity
             android:name=".AddStudentActivity"
@@ -39,6 +35,15 @@
         <activity
             android:name=".UpdateMainActivity"
             android:label="@string/title_activity_update_main" >
+        </activity>
+        <activity
+            android:name=".EnterActivity"
+            android:label="@string/title_activity_enter" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
