--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -18,7 +18,6 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
-            
         </activity>
         <activity
             android:name=".AddStudentActivity"
@@ -44,6 +43,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".DeleteActivity"
+            android:label="@string/title_activity_delete" >
         </activity>
     </application>
 
